le sume un parrafo

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     </header>
     <main>
         <h2>cumplimos</h2>
+        <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum fuga tempore quidem vero repellendus, autem illo inventore tempora maiores voluptates iusto qui rem, soluta accusantium architecto deserunt ipsa nihil adipisci dolor. Facilis molestias esse libero repudiandae cupiditate laudantium reprehenderit. Id optio eaque voluptatibus odio commodi explicabo cum repellat reiciendis reprehenderit?
+        </p>
     </main>
 </body>
 </html>
